fixed the tests

--- a/tests/run_all_tests.ipynb
+++ b/tests/run_all_tests.ipynb
@@ -39,8 +39,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                                                        [100%]\u001b[0m\n",
-      "\u001b[32m\u001b[32m\u001b[1m17 passed\u001b[0m\u001b[32m in 0.35s\u001b[0m\u001b[0m\n",
+      "\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                                                         [100%]\u001b[0m\n",
+      "\u001b[32m\u001b[32m\u001b[1m16 passed\u001b[0m\u001b[32m in 0.55s\u001b[0m\u001b[0m\n",
       "\n"
      ]
     }
@@ -80,7 +80,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[32m.\u001b[0m\u001b[32m                                                                        [100%]\u001b[0m\n",
-      "\u001b[32m\u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.29s\u001b[0m\u001b[0m\n",
+      "\u001b[32m\u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.39s\u001b[0m\u001b[0m\n",
       "\n"
      ]
     }
@@ -102,7 +102,7 @@
       "\u001b[1m============================= test session starts =============================\u001b[0m\n",
       "platform win32 -- Python 3.13.1, pytest-8.4.2, pluggy-1.6.0 -- c:\\Programs\\Python313\\python.exe\n",
       "cachedir: .pytest_cache\n",
-      "rootdir: e:\\users\\tel\\Python\\site-packages\\Scriptum\n",
+      "rootdir: e:\\users\\tel\\Python\\site-packages\\Scriptum-Report\n",
       "configfile: pyproject.toml\n",
       "\u001b[1mcollecting ... \u001b[0mcollected 4 items\n",
       "\n",
@@ -111,7 +111,7 @@
       "tables\\test_docx_tables.py::test_document_is_created \u001b[32mPASSED\u001b[0m\u001b[32m              [ 75%]\u001b[0m\n",
       "text\\test_docx_text.py::test_document_is_created \u001b[32mPASSED\u001b[0m\u001b[32m                  [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m4 passed\u001b[0m\u001b[32m in 1.10s\u001b[0m\u001b[32m ==============================\u001b[0m\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m4 passed\u001b[0m\u001b[32m in 1.04s\u001b[0m\u001b[32m ==============================\u001b[0m\n",
       "\n"
      ]
     }
@@ -133,13 +133,13 @@
       "\u001b[1m============================= test session starts =============================\u001b[0m\n",
       "platform win32 -- Python 3.13.1, pytest-8.4.2, pluggy-1.6.0 -- c:\\Programs\\Python313\\python.exe\n",
       "cachedir: .pytest_cache\n",
-      "rootdir: e:\\users\\tel\\Python\\site-packages\\Scriptum\n",
+      "rootdir: e:\\users\\tel\\Python\\site-packages\\Scriptum-Report\n",
       "configfile: pyproject.toml\n",
       "\u001b[1mcollecting ... \u001b[0mcollected 1 item\n",
       "\n",
       "simple\\test_pptx_simple.py::test_document_is_created \u001b[32mPASSED\u001b[0m\u001b[32m              [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 1.09s\u001b[0m\u001b[32m ==============================\u001b[0m\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 1.24s\u001b[0m\u001b[32m ==============================\u001b[0m\n",
       "\n"
      ]
     }
@@ -159,7 +159,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                                                                      [100%]\u001b[0m\n",
-      "\u001b[32m\u001b[32m\u001b[1m3 passed\u001b[0m\u001b[32m in 2.18s\u001b[0m\u001b[0m\n",
+      "\u001b[32m\u001b[32m\u001b[1m3 passed\u001b[0m\u001b[32m in 2.50s\u001b[0m\u001b[0m\n",
       "\n"
      ]
     }
